[#1088] fix jumping canvas on hover out

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28903,6 +28903,11 @@ table.dataTable thead .sorting_desc {
   display: inline-block;
 }
 
+.contacts-list-img:first-child {
+    transition: all 0.5s ease;
+    margin-left: 0;
+}
+
 .contacts-list-img:not(:first-child) {
   transition: all 0.5s ease;
   margin-left: -25px;
